<resources>
    <string name="app_name">Settle Expenses</string>
    <string name="tab_1_expenses">Expenses</string>
    <string name="tab_2_contacts">Contacts</string>
    <string name="empty_contacts">No contacts yet.\nStart by tapping \'+\'.</string>
    <string name="first_name">First name</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="last_name">Last name</string>
    <string name="save">Save</string>
    <string name="action_search">Search contact</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="owes_you">Owes you</string>
    <string name="expenses">Expenses</string>
    <string name="empty_expenses">So far no expense was made.\nCreate one by tapping \'+\'.</string>
    <string name="currency_dollar">$</string>
    <string name="expense_name">Title of group</string>
    <string name="add_new_expense">Add Expense</string>
    <string name="add_expense_participants">Add expense participants</string>
    <string name="add_new">Add new</string>
    <string name="amount">Amount</string>
    <string name="error_group_name">Group name must be filled</string>
    <string name="error_price">Price must be non zero.</string>
    <string name="error_pick_contacts">At least one contact has to be selected.</string>
    <string name="balance">Balance</string>
    <string name="expense_participants">Expense participants</string>
    <string name="mark_as_settled">Mark as settled</string>
    <string name="of">of</string>
    <string name="remaining">remaining</string>
</resources>