<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.ContactDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SettleExpenses.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/first_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        android:text="@string/first_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@sample/sample_names" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/last_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        android:text="@string/last_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@sample/sample_names" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/debt_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        android:text="@string/owes_you"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/debt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="$50" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/expenses_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        android:text="@string/expenses"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>